# Aurora

./: .env.example  .gitignore  CONTEXT.md  Cargo.toml  README.md  README.zh-CN.md  agent.py  plan.md
aurorapulse/: __init__.py
aurorapulse/core/: __init__.py  agent.py  settings.py
aurorapulse/integrations/llm/: gemma4_ollama.py
aurorapulse/integrations/music/: __init__.py  spotify.py  spotify_tool.py
aurorapulse/interfaces/: cli.py
docs/: product.md  roadmap-cn.md  technical-architecture.md
docs/adr/: 0001-local-mcp-memory-layer.md  0001-rust-primary-runtime.md  0002-custom-harness-and-unified-tool-layer.md
docs/architecture/phase-diagrams/: README.md
docs/architecture/phase-diagrams/prompts/: phase-1-identity-context-architecture.md  phase-2-model-provider-architecture.md  phase-3-harness-architecture.md
docs/dev-log/: 2026-6-1.md  2026-6-10.md  2026-6-12.md
examples/: current-focus.md  identity-card.md  preferences.json  privacy-rules.json
src/: app.rs  cli.rs  command_palette.rs  config.rs  context.rs  harness.rs  lib.rs  main.rs  mcp.rs  model_provider.rs  ollama.rs  planner.rs  session.rs  startup_animation.rs  theme.rs
src/context/: mod.rs
src/model/: mod.rs  ollama.rs  openai.rs
src/tools/: mod.rs
tests/: app_runtime.rs  context_loading.rs  harness_runtime.rs  mcp_identity.rs  planner_schema.rs  startup_cli.rs
