[package]
name = "aurora"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
ctrlc = "3.4"
rmcp = { version = "2.2", default-features = false, features = ["macros", "server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "rt"] }
unicode-width = "0.2"
